fix(home): reduce spacing above hero

--- a/src/app/features/home/home.scss
+++ b/src/app/features/home/home.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   gap: 32px;
-  padding-top: 92px;
+  padding-top: 74px;
 }
 
 .hero__text {
